#2 Completed documentation for templates

--- a/sitespecific/content/config
+++ b/sitespecific/content/config
@@ -1,8 +1,23 @@
 <h2>Configuring WalkerCMS</h2>
 <ul>
-  <li><a href="" title=""></a></li>
+  <li><a href="#overview" title="Configuration Overview">Overview</a></li>
+  <li><a href="#site-config" title="Site Configuration">Site</a></li>
+  <li><a href="$page-defaults" title="Page Defaults Configuration">Page Defaults</a></li>
+  <li><a href="#pages" title="Page Configuration">Pages</a></li>
 </ul>
 
-<h3><a name=""></a></h3>
+<h3><a name="overview"></a>Overview</h3>
+<p></p>
+<p class="back-to-top"><a href="#top" title="Back to top">Back to top</a></p>
+
+<h3><a name="site-config"></a>Site</h3>
+<p></p>
+<p class="back-to-top"><a href="#top" title="Back to top">Back to top</a></p>
+
+<h3><a name="page-defaults"></a>Page Defaults</h3>
+<p></p>
+<p class="back-to-top"><a href="#top" title="Back to top">Back to top</a></p>
+
+<h3><a name="pages"></a>Pages</h3>
 <p></p>
 <p class="back-to-top"><a href="#top" title="Back to top">Back to top</a></p>
