#9 Tweak trademark caveats

--- a/sitespecific/content/config
+++ b/sitespecific/content/config
@@ -430,4 +430,4 @@ $pages['home'] = array('page_title' => 'Home');</pre>
 
 <p>Microsoft&reg; and Internet Explorer&reg; are registered trademarks of the
    Microsoft&reg; group of companies. Their reference here does not imply any endorsement
-   by Microsoft&reg; of WalkerCMS, nor endorsement of Microsoft&reg; by WalkerCMS.</p>
+   by Microsoft&reg; of WalkerCMS, nor endorsement of by WalkerCMS of Microsoft&reg;.</p>
